@@ -59,19 +59,27 @@
         <x>0</x>
         <y>0</y>
         <width>680</width>
-        <height>477</height>
+        <height>479</height>
        </rect>
       </property>
       <layout class="QGridLayout" name="gridLayout_2">
        <item row="4" column="0">
-        <widget class="QGroupBox" name="groupBox_fluorescence">
+        <widget class="QGroupBox" name="groupBox_imaging">
          <property name="title">
-          <string>Fluorescence</string>
+          <string>Imaging</string>
          </property>
-         <layout class="QVBoxLayout" name="verticalLayout_4"/>
+         <layout class="QVBoxLayout" name="verticalLayout_3"/>
         </widget>
        </item>
-       <item row="6" column="0">
+       <item row="3" column="0">
+        <widget class="QGroupBox" name="groupBox_setup">
+         <property name="title">
+          <string>Setup</string>
+         </property>
+         <layout class="QVBoxLayout" name="verticalLayout_2"/>
+        </widget>
+       </item>
+       <item row="7" column="0">
         <widget class="QGroupBox" name="groupBox_online_filter">
          <property name="title">
           <string>Online Filter</string>
@@ -90,7 +98,23 @@
          <layout class="QVBoxLayout" name="verticalLayout"/>
         </widget>
        </item>
-       <item row="7" column="0">
+       <item row="2" column="0">
+        <widget class="QGroupBox" name="groupBox_user">
+         <property name="title">
+          <string>User</string>
+         </property>
+         <layout class="QVBoxLayout" name="verticalLayout_8"/>
+        </widget>
+       </item>
+       <item row="5" column="0">
+        <widget class="QGroupBox" name="groupBox_fluorescence">
+         <property name="title">
+          <string>Fluorescence</string>
+         </property>
+         <layout class="QVBoxLayout" name="verticalLayout_4"/>
+        </widget>
+       </item>
+       <item row="8" column="0">
         <widget class="QGroupBox" name="groupBox_online_contour">
          <property name="title">
           <string>Online Contour</string>
@@ -98,28 +122,12 @@
          <layout class="QVBoxLayout" name="verticalLayout_6"/>
         </widget>
        </item>
-       <item row="3" column="0">
-        <widget class="QGroupBox" name="groupBox_imaging">
-         <property name="title">
-          <string>Imaging</string>
-         </property>
-         <layout class="QVBoxLayout" name="verticalLayout_3"/>
-        </widget>
-       </item>
-       <item row="2" column="0">
-        <widget class="QGroupBox" name="groupBox_setup">
-         <property name="title">
-          <string>Setup</string>
-         </property>
-         <layout class="QVBoxLayout" name="verticalLayout_2"/>
-        </widget>
-       </item>
        <item row="1" column="0">
-        <widget class="QGroupBox" name="groupBox_user">
+        <widget class="QGroupBox" name="groupBox_pipeline">
          <property name="title">
-          <string>User</string>
+          <string>Pipeline</string>
          </property>
-         <layout class="QVBoxLayout" name="verticalLayout_8"/>
+         <layout class="QVBoxLayout" name="verticalLayout_9"/>
         </widget>
        </item>
       </layout>
